Added EDA Charts

--- a/eda_fight_data.ipynb
+++ b/eda_fight_data.ipynb
@@ -2,7 +2,7 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": null,
       "metadata": {},
       "outputs": [
         {
@@ -287,82 +287,77 @@
         }
       ],
       "source": [
-        "# MMA Fight Outcome Prediction - EDA Without Seaborn\n",
-        "# Author: Huzaifa Nadeem\n",
-        "\n",
-        "from collections import Counter\n",
-        "from random import randint\n",
         "import pandas as pd\n",
         "import matplotlib.pyplot as plt\n",
-        "import numpy as np\n",
         "\n",
-        "print(\"All required packages imported (no seaborn).\")\n",
+        "# Load the cleaned dataset\n",
+        "df = pd.read_csv('ufc_cleaned_data.csv')\n",
         "\n",
-        "# Load dataset\n",
-        "url = \"https://raw.githubusercontent.com/HuzaifaUCMO/mma-fight-prediction-capstone/main/ufc_cleaned_data.csv\"\n",
-        "df = pd.read_csv(url)\n",
+        "# Initial Overview\n",
+        "print(\"Shape of dataset:\", df.shape)\n",
+        "print(\"\\nColumns:\\n\", df.columns.tolist())\n",
+        "print(\"\\nData Types:\\n\", df.dtypes)\n",
+        "print(\"\\nMissing values:\\n\", df.isnull().sum())\n",
         "\n",
-        "# Basic info\n",
-        "print(\"\\n--- Data Info ---\")\n",
-        "print(df.info())\n",
+        "# Descriptive Statistics\n",
+        "desc_stats = df.describe()\n",
+        "print(desc_stats)\n",
         "\n",
-        "# Descriptive statistics\n",
-        "print(\"\\n--- Descriptive Statistics ---\")\n",
-        "print(df.describe().T)\n",
-        "\n",
-        "# Plot histograms for all numeric columns\n",
-        "numerical_cols = df.select_dtypes(include=[np.number]).columns\n",
-        "\n",
-        "df[numerical_cols].hist(bins=20, figsize=(15, 12), color='lightblue', edgecolor='black')\n",
+        "# Distribution of Numeric Features\n",
+        "numeric_cols = df.select_dtypes(include=['int64', 'float64']).columns\n",
+        "df[numeric_cols].hist(figsize=(16, 12), bins=30)\n",
+        "plt.suptitle(\"Distribution of Numeric Features\", fontsize=16)\n",
         "plt.tight_layout()\n",
-        "plt.suptitle(\"Histograms of Numerical Features\", y=1.02, fontsize=16)\n",
+        "plt.savefig(\"eda_numeric_distribution.png\")\n",
         "plt.show()\n",
         "\n",
-        "# Bar chart for stance\n",
-        "stance_counts = df['stance'].value_counts()\n",
-        "\n",
-        "plt.figure(figsize=(8, 5))\n",
-        "plt.bar(stance_counts.index, stance_counts.values, color='orange', edgecolor='black')\n",
-        "plt.title(\"Fighter Stance Distribution\")\n",
-        "plt.xlabel(\"Stance\")\n",
-        "plt.ylabel(\"Count\")\n",
-        "plt.xticks(rotation=45)\n",
-        "plt.grid(axis='y', linestyle='--', alpha=0.7)\n",
+        "# Target Variable Distribution\n",
+        "df['Result'].value_counts().plot(kind='bar', title='Fight Result Distribution')\n",
+        "plt.xlabel('Result')\n",
+        "plt.ylabel('Count')\n",
         "plt.tight_layout()\n",
+        "plt.savefig(\"eda_result_distribution.png\")\n",
         "plt.show()\n",
         "\n",
-        "# Correlation matrix (text-based)\n",
-        "print(\"\\n--- Correlation Matrix ---\")\n",
-        "corr_matrix = df[numerical_cols].corr().round(2)\n",
-        "print(corr_matrix)\n",
-        "\n",
-        "# Scatter plot for strikes landed vs. absorbed, color-coded by stance\n",
-        "colors = {\n",
-        "    'Orthodox': 'blue',\n",
-        "    'Southpaw': 'red',\n",
-        "    'Switch': 'green',\n",
-        "    'Unknown': 'gray',\n",
-        "    'Open Stance': 'purple'\n",
-        "}\n",
-        "\n",
-        "plt.figure(figsize=(8, 6))\n",
-        "for stance in df['stance'].unique():\n",
-        "    subset = df[df['stance'] == stance]\n",
-        "    plt.scatter(\n",
-        "        subset['significant_strikes_landed_per_minute'],\n",
-        "        subset['significant_strikes_absorbed_per_minute'],\n",
-        "        label=stance,\n",
-        "        alpha=0.6,\n",
-        "        c=colors.get(stance, 'black')\n",
-        "    )\n",
-        "\n",
-        "plt.title(\"Strikes Landed vs. Absorbed per Minute by Stance\")\n",
-        "plt.xlabel(\"Strikes Landed/Min\")\n",
-        "plt.ylabel(\"Strikes Absorbed/Min\")\n",
-        "plt.legend()\n",
-        "plt.grid(True, linestyle='--', alpha=0.5)\n",
+        "# Correlation Matrix\n",
+        "correlation = df[numeric_cols].corr()\n",
+        "plt.figure(figsize=(14, 10))\n",
+        "plt.imshow(correlation, cmap='coolwarm', interpolation='none')\n",
+        "plt.colorbar()\n",
+        "plt.xticks(range(len(numeric_cols)), numeric_cols, rotation=90)\n",
+        "plt.yticks(range(len(numeric_cols)), numeric_cols)\n",
+        "plt.title('Correlation Matrix')\n",
         "plt.tight_layout()\n",
-        "plt.show()"
+        "plt.savefig(\"eda_correlation_matrix.png\")\n",
+        "plt.show()\n",
+        "\n",
+        "# Strikes Landed Per Minute by Result\n",
+        "df.boxplot(column='significant_strikes_landed_per_minute', by='Result')\n",
+        "plt.title('Strikes Landed Per Minute by Result')\n",
+        "plt.suptitle('')\n",
+        "plt.xlabel('Result')\n",
+        "plt.ylabel('Strikes Landed Per Minute')\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(\"eda_strikes_boxplot.png\")\n",
+        "plt.show()\n",
+        "\n",
+        "# Takedown Defense by Result\n",
+        "df.boxplot(column='takedown_defense', by='Result')\n",
+        "plt.title('Takedown Defense by Result')\n",
+        "plt.suptitle('')\n",
+        "plt.xlabel('Result')\n",
+        "plt.ylabel('Takedown Defense (%)')\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(\"eda_takedown_defense.png\")\n",
+        "plt.show()\n",
+        "\n",
+        "# Fighter Stance Distribution\n",
+        "df['stance'].value_counts().plot(kind='bar', title='Fighter Stance Distribution')\n",
+        "plt.xlabel('Stance')\n",
+        "plt.ylabel('Count')\n",
+        "plt.tight_layout()\n",
+        "plt.savefig(\"eda_stance_distribution.png\")\n",
+        "plt.show()\n"
       ]
     }
   ],
